Fix Civ4 import UI and add volume mount for Civ4 files
- Remove corrupted content from edit.html.erb that was displaying incorrect file path
- Add volume mount for Civ4_Maps directory in docker-compose.dev.yml to enable file access

--- a/galaxy_game/app/views/admin/celestial_bodies/edit.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/edit.html.erb
@@ -348,5 +348,4 @@
         }
     </style>
 </body>
-</html></content>
-<parameter name="filePath">/Users/tam0013/Documents/git/galaxyGame/galaxy_game/app/views/admin/celestial_bodies/edit.html.erb
+</html>
